# ai-ticket-platform

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
ai_ticket_platform/app/: config.py  database.py  main.py  security.py
ai_ticket_platform/app/ api/: admin.py  documents.py
ai_ticket_platform/app/ai/: chunking.py  embeddings.py  evaluation.py  prompts.py  vector_store.py
ai_ticket_platform/app/api/: chat.py  documents.py  health.py  tickets.py
ai_ticket_platform/app/models/: db.py  schemas.py
ai_ticket_platform/app/services/: classifier_service.py  document_service.py  llm_service.py  rag_service.py  ticket_service.py
ai_ticket_platform/app/utils/: errors.py  logging.py
ai_ticket_platform/app/workers/: tasks.py
ai_ticket_platform/docs/: ai_pipeline.md  api.md  architecture.md
ai_ticket_platform/frontend/: streamlit_app.py
ai_ticket_platform/scripts/: ingest_documents.py  seed_data.py  train_classifier.py
ai_ticket_platform/tests/: test_classifier.py  test_rag.py  test_tickets.py
