[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ticket-platform"
version = "0.1.1"
description = "Enterprise AI SaaS platform for automatic ticket classification and RAG-powered support workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Valentin Sheboldaev" }
]

keywords = [
    "ai",
    "saas",
    "ticketing",
    "rag",
    "llm",
    "fastapi",
    "machine-learning",
    "classification",
    "vector-search",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",

    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "alembic>=1.16.0",

    "redis>=6.2.0",
    "celery>=5.5.0",

    "openai>=1.90.0",

    "numpy>=2.3.0",
    "scikit-learn>=1.7.0",
    "joblib>=1.5.0",

    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",

    "pypdf>=5.6.0",
    "python-docx>=1.2.0",

    "streamlit>=1.46.0",
    "requests>=2.32.0",

    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "sentence-transformers>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.0",

    "black>=25.1.0",
    "ruff>=0.12.0",
    "mypy>=1.16.0",

    "types-requests>=2.32.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_ticket_platform*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "ai_ticket_platform/tests",
]

python_files = [
    "test_*.py",
]

python_functions = [
    "test_*",
]

addopts = """
-v
-ra
--strict-markers
"""

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
]

ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = [
    "venv",
    ".venv",
]

[tool.coverage.run]
source = [
    "ai_ticket_platform",
]

omit = [
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
